--- a/Presentation/Modules/SignIn/View/SignInViewController.storyboard
+++ b/Presentation/Modules/SignIn/View/SignInViewController.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RvU-Wz-6Oh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RvU-Wz-6Oh">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,17 +16,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hka-Es-e0e">
-                                <rect key="frame" x="37.5" y="230" width="300" height="207"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnd-8g-JEr" userLabel="Spacer">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="73.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Register_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="pvP-8h-5la">
-                                        <rect key="frame" x="86.5" y="0.0" width="127" height="147"/>
+                                        <rect key="frame" x="144.5" y="93.5" width="86" height="100"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="127" id="3mH-tQ-awa"/>
-                                            <constraint firstAttribute="height" constant="147" id="sIi-5g-QdI"/>
+                                            <constraint firstAttribute="height" constant="100" id="sIi-5g-QdI"/>
+                                            <constraint firstAttribute="width" secondItem="pvP-8h-5la" secondAttribute="height" multiplier="127:147" id="y0w-Oy-Vlt"/>
                                         </constraints>
                                     </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="scE-s5-D3m" customClass="SignInDescriptionView" customModule="Presentation" customModuleProvider="target">
+                                        <rect key="frame" x="37.5" y="213.5" width="300" height="300"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="scE-s5-D3m" secondAttribute="height" multiplier="1:1" id="Xd8-Cv-ZyE"/>
+                                        </constraints>
+                                    </view>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input player tag" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SBj-yJ-g7G">
-                                        <rect key="frame" x="0.0" y="167" width="300" height="40"/>
+                                        <rect key="frame" x="37.5" y="533.5" width="300" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="QFf-ja-Ewz"/>
                                             <constraint firstAttribute="height" constant="40" id="z0C-by-nZa"/>
@@ -35,20 +45,32 @@
                                         <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mvf-vD-qyN" userLabel="Spacer">
+                                        <rect key="frame" x="0.0" y="593.5" width="375" height="73.5"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Mvf-vD-qyN" firstAttribute="width" secondItem="bnd-8g-JEr" secondAttribute="width" id="6oT-b6-6S2"/>
+                                    <constraint firstItem="scE-s5-D3m" firstAttribute="width" secondItem="SBj-yJ-g7G" secondAttribute="width" id="HOH-iC-X9I"/>
+                                    <constraint firstItem="Mvf-vD-qyN" firstAttribute="height" secondItem="bnd-8g-JEr" secondAttribute="height" id="bjY-DW-RkF"/>
+                                </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hka-Es-e0e" firstAttribute="centerX" secondItem="ryh-Dd-KJm" secondAttribute="centerX" id="EL4-6j-r0p"/>
-                            <constraint firstItem="hka-Es-e0e" firstAttribute="centerY" secondItem="ryh-Dd-KJm" secondAttribute="centerY" id="UD5-6B-n8Y"/>
+                            <constraint firstItem="hka-Es-e0e" firstAttribute="leading" secondItem="7km-GW-sGv" secondAttribute="leading" id="JEY-dK-9fc"/>
+                            <constraint firstAttribute="trailing" secondItem="hka-Es-e0e" secondAttribute="trailing" id="SUQ-BV-KZL"/>
+                            <constraint firstAttribute="bottom" secondItem="hka-Es-e0e" secondAttribute="bottom" id="Uit-cT-94V"/>
+                            <constraint firstItem="hka-Es-e0e" firstAttribute="top" secondItem="7km-GW-sGv" secondAttribute="top" id="eFU-Mb-3vf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7km-GW-sGv"/>
                     </view>
                     <connections>
+                        <outlet property="descriptionView" destination="scE-s5-D3m" id="iAl-Rb-YWA"/>
                         <outlet property="inputPlayerTagTextField" destination="SBj-yJ-g7G" id="6sQ-3d-PeT"/>
                         <outlet property="stackView" destination="hka-Es-e0e" id="0MU-Le-yYz"/>
-                        <outlet property="stackViewCenterYConstraint" destination="UD5-6B-n8Y" id="FUm-zv-lSk"/>
+                        <outlet property="stackViewCenterYConstraint" destination="eFU-Mb-3vf" id="dye-xc-jrN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5h3-kl-qJT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
