--- a/Presentation/Modules/Deck/View/Custom/DeckPreview/DeckPreviewCell.xib
+++ b/Presentation/Modules/Deck/View/Custom/DeckPreview/DeckPreviewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="80" height="96"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bandit" translatesAutoresizingMaskIntoConstraints="NO" id="IHk-1I-dCz">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IHk-1I-dCz">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="96"/>
                     </imageView>
                 </subviews>
@@ -32,7 +32,4 @@
             <point key="canvasLocation" x="142" y="118"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="bandit" width="302" height="363"/>
-    </resources>
 </document>
