--- a/Presentation/Modules/DeckCreate/View/Custom/List/DeckCreateListCell.xib
+++ b/Presentation/Modules/DeckCreate/View/Custom/List/DeckCreateListCell.xib
@@ -18,7 +18,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s91-1B-2ae">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="96"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bandit" translatesAutoresizingMaskIntoConstraints="NO" id="cF8-Gf-mGK" userLabel="IconView">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cF8-Gf-mGK" userLabel="IconView">
                                 <rect key="frame" x="0.0" y="0.0" width="80" height="96"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.94999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level 12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0l-6W-Ado" userLabel="LevelLabel">
@@ -146,7 +146,4 @@
             <point key="canvasLocation" x="141" y="154"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="bandit" width="302" height="363"/>
-    </resources>
 </document>
