--- a/Presentation/Modules/DeckCreate/View/Custom/Preview/DeckCreatePreviewCell.xib
+++ b/Presentation/Modules/DeckCreate/View/Custom/Preview/DeckCreatePreviewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="40" height="48"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bandit" translatesAutoresizingMaskIntoConstraints="NO" id="xha-Jl-BPa">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xha-Jl-BPa">
                         <rect key="frame" x="0.0" y="0.0" width="40" height="48"/>
                     </imageView>
                 </subviews>
@@ -34,7 +34,4 @@
             <point key="canvasLocation" x="141" y="154"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="bandit" width="302" height="363"/>
-    </resources>
 </document>
