--- a/Presentation/Modules/SignIn/View/SignInViewController.storyboard
+++ b/Presentation/Modules/SignIn/View/SignInViewController.storyboard
@@ -22,7 +22,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="73.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Register_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="pvP-8h-5la">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Register_logo" translatesAutoresizingMaskIntoConstraints="NO" id="pvP-8h-5la">
                                         <rect key="frame" x="144.5" y="93.5" width="86" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="sIi-5g-QdI"/>
@@ -79,6 +79,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Register_Logo" width="1270" height="1469"/>
+        <image name="Register_logo" width="2048" height="2048"/>
     </resources>
 </document>
